refactor ignore content before

--- a/cask/src/main/resources/static/index.html
+++ b/cask/src/main/resources/static/index.html
@@ -83,7 +83,7 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
 <script>
-   var caskUrl = "ws://localhost:8800/cask/csv/OrderWindowSummaryCsv?debug=true&nullValue=NULL&csvDelimiter=;&csvFirstRecordAsHeader=false";
+   var caskUrl = "ws://localhost:8800/cask/csv/OrderWindowSummaryCsv?debug=true&nullValue=NULL&delimiter=;&firstRecordAsHeader=false";
    var clientWebSocket;
    var message = "Body of the message - paste here JSON or CSV message to ingest";
 
