--- a/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-query-service/src/main/web/src/index.html
@@ -8,9 +8,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="icon" type="image/png" href="icon-48x48.png">
   <style>
     #noSupport {
       position: relative;
