--- a/vyne-query-service/src/main/web/.storybook/preview-head.html
+++ b/vyne-query-service/src/main/web/.storybook/preview-head.html
@@ -1,2 +1,3 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,600|Open+Sans:300,400,600|Nanum+Gothic+Coding" rel="stylesheet">
+<base href='/'>
