--- a/vyne-query-service/src/main/web/src/index.html
+++ b/vyne-query-service/src/main/web/src/index.html
@@ -41,32 +41,32 @@
 </head>
 
 <body>
-
-<div id="root" style = "height: 100%">
+<div id="root" style="height: 100%">
   <app-root></app-root>
 </div>
-<div id="noSupport" style="display: none">
-  <div class="noSupport">
-    <img src="assets/img/vyne-logo-round.png" width="128px" height="128px">
-    <p>Oh no! Your browser has gone the way of the dinosaur, and isn't supported. We suggest you give Firefox or
-      Chrome
-      a go.
-    </p>
-  </div>
-</div>
+
+<!--<div id="noSupport" style="display: none">-->
+<!--  <div class="noSupport">-->
+<!--    <img src="assets/img/vyne-logo-round.png" width="128px" height="128px">-->
+<!--    <p>Oh no! Your browser has gone the way of the dinosaur, and isn't supported. We suggest you give Firefox or-->
+<!--      Chrome-->
+<!--      a go.-->
+<!--    </p>-->
+<!--  </div>-->
+<!--</div>-->
 <script>
-  function isIE() {
-    return /Trident\/|MSIE/.test(window.navigator.userAgent);
-  }
-
-  if (isIE()) {
-    document.getElementById('noSupport').style.display = 'block';
-    document.getElementById('root').style.display = 'none';
-
-  } else {
-    document.getElementById('root').style.display = 'block';
-    document.getElementById('noSupport').style.display = 'none';
-  }
+  // function isIE() {
+  //   return /Trident\/|MSIE/.test(window.navigator.userAgent);
+  // }
+  //
+  // if (isIE()) {
+  //   document.getElementById('noSupport').style.display = 'block';
+  //   document.getElementById('root').style.display = 'none';
+  //
+  // } else {
+  //   document.getElementById('root').style.display = 'block';
+  //   document.getElementById('noSupport').style.display = 'none';
+  // }
 </script>
 </body>
 
