Update page title and description

--- a/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
+++ b/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
@@ -3,8 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Taxi Playground</title>
+  <title>Voyager - a microservices diagramming tool</title>
   <base href="/">
+
+  <meta name="description" content="Easily create diagrams that visualize the connections between microservices and data sources in your stack">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="taxi-logo-48x48.png">
