Update plausible setup

--- a/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
+++ b/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
@@ -11,6 +11,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="taxi-logo-48x48.png">
   
+  <script defer data-domain="voyager.vyne.co" src="https://plausible.io/js/plausible.js"></script>
+
   <style>
     #noSupport {
       position: relative;
