voyager: Add share capability

--- a/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
+++ b/vyne-query-service/src/main/web/src/taxi-playground-app/index.html
@@ -10,7 +10,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="taxi-logo-48x48.png">
-  
+
   <script defer data-domain="voyager.vyne.co" src="https://plausible.io/js/plausible.js"></script>
 
   <style>
@@ -46,7 +46,7 @@
 
 <body>
   <div id="root" style="height: 100%">
-    <taxi-playground-app></taxi-playground-app>
+    <taxi-playground-container-app></taxi-playground-container-app>
   </div>
 </body>
 
